# cmd-mcp-framework

./: .dockerignore  .editorconfig  .gitignore  .graphifyignore  CMakeLists.txt  Dockerfile  README.md  build.sh  create-patch.sh  fuge.yml  graphify-out  justfile  model-list.md  nx.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/skills/plugins-provider-writing/: SKILL.md
mcp-apps/dashboard-ui/: README.md  build-ui.mjs  copilot-prompt.md  copy-ui-files.mjs  index.html  package.json  resource-manifest.json  server.ts  tsconfig.json  vite.config.ts
mcp-apps/dashboard-ui/.github/skills/mcp-app-ui/: SKILL.md
mcp-apps/dashboard-ui/.storybook/: main.ts  preview.ts
mcp-apps/dashboard-ui/src/: App.tsx  index.css  main.tsx
mcp-apps/dashboard-ui/src/geo-form/: App.tsx  geo-form.stories.tsx  geo-form.tsx
mcp-apps/dashboard-ui/src/greet/: greet.stories.tsx  greet.tsx
mcp-apps/dashboard-ui/src/hello-world/: hello-world.stories.tsx  hello-world.tsx
mcp-apps/dashboard-ui/src/math/: Add.tsx
mcp-apps/dashboard-ui/src/math-form/: App.tsx  math-form.stories.tsx  math-form.tsx
mcp-apps/dashboard-ui/storybook-static/: iframe.html  index.html  index.json  project.json
mcp-apps/dashboard-ui/storybook-static/assets/: Color-YHDXOIA2-P91gWoai.js  DocsRenderer-CFRXHY34-D16rfgzI.js  app-BWa8Rla3.js  chunk-XP5HYGXS-rhzvizV_.js  client-D4rjELlO.js  entry-preview-DnhkQ9L-.js  entry-preview-docs-BJSwDJQy.js  geo-form.stories-HJCr8jT2.js  iframe-D6AlitCx.js  index-B8PK_SAq.js  index-BO6cjGmN.js  index-BPrLzDcw.css  index-Bc2G9s8g.js  index-Bhqu_tAV.js  index-DFKLPRTC.js  index-RbKL8T8R.js  jsx-runtime-DFAAy_2V.js  math-form.stories-BtUNZz-C.js  preview-B0GEC7uH.js  preview-CCCznEf4.js  preview-DvybVT7_.js  preview-kCShiF4O.js  react-18-Bc4JoLoz.js  react-FmFgRqLi.js  test-utils-B5mLoBWX.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/essentials-actions-2/: manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/essentials-backgrounds-4/: manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/essentials-controls-1/: manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/essentials-docs-3/: manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/essentials-measure-7/: manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/essentials-outline-8/: manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/essentials-toolbars-6/: manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/essentials-viewport-5/: manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-addons/storybook-core-core-server-presets-0/: common-manager-bundle.js
mcp-apps/dashboard-ui/storybook-static/sb-manager/: globals-runtime.js
mcp-apps/dashboard-ui/ui/: geo-form.html  greet.html  hello-world.html  math-form.html
mcp-python-server/: README.md  pyproject.toml  start-with-venv.sh
mcp-python-server/src/mcp_python_server/: __main__.py  bridge_client.py  config.py  main.py  mcp_host.py  rest_host.py
mcp-python-server/ui/: index.html
mcp-python-server/ui/static/: app.js  styles.css
patch/: .gitignore  readme.md
patch/mcp_sdk-src/src/lifecycle/: session.cpp.patch
patch/mcp_sdk-src/src/transport/http/: runtime.cpp.patch  server.cpp.patch
projects/cmd_sdk/: CMakeLists.txt
projects/cmd_sdk/include/cmdsdk/: Cmd.hpp  CommandMetadata.hpp  CommandRegistry.hpp  ICmd.hpp  OpenApiAggregator.hpp  OpenApiGenerator.hpp  PluginApi.hpp  PluginMetadata.hpp  PluginOpenApiLoader.hpp  ProviderRegistrar.hpp  RestApiHandler.hpp  SubCmd.hpp  SwaggerResources.hpp
projects/cmd_sdk/src/: Cmd.cpp  CommandRegistry.cpp  ProviderRegistrar.cpp  SubCmd.cpp
projects/cmdsdk_bridge/: CMakeLists.txt
projects/cmdsdk_bridge/include/cmdsdk_bridge/: CmdSdkBridge.h
projects/cmdsdk_bridge/src/: CmdSdkBridge.cpp
projects/fastmcp_server/: CMakeLists.txt
projects/fastmcp_server/src/: FastMcpLogger.cpp  FastMcpLogger.hpp  FastMcpStringUtils.cpp  FastMcpStringUtils.hpp  HtmlTemplateString.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginRegistration.cpp  PluginRegistration.hpp  RestImplementation.cpp  RestImplementation.hpp  main.cpp
projects/plugins/greeting_cmd_provider/: CMakeLists.txt
projects/plugins/greeting_cmd_provider/src/: GreetingCmdProvider.cpp
projects/plugins/math_cmd_provider/: CMakeLists.txt  openapi.spec.yml
projects/plugins/math_cmd_provider/src/: GeometryCmdProvider.cpp  MathCmdProvider.cpp
